--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#00FFFF"
-backgroundColor = "#00172B"
-secondaryBackgroundColor = "#0083B8"
-textColor = "#FFFFFF"
+backgroundColor = "#22FBFB"
+secondaryBackgroundColor = "#027B7B"
+textColor = "#000000"
 font = "sans-serif"
