--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ sqlalchemy==1.4.36
 python-dotenv==0.20.0
 opencv==4.5.3 
 opencv-python==4.6.0.66
-mediapipe-silicon==0.8.10.1 
+mediapipe-silicon==0.8.10.1
+streamlit_webrtc==0.42.0
