--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#00FFFF"
-backgroundColor = "#22FBFB"
-secondaryBackgroundColor = "#027B7B"
+primaryColor = "#F92E2E"
+backgroundColor = "#00D1FF"
+secondaryBackgroundColor = "#0094D0"
 textColor = "#000000"
