:memo: config.toml

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#F92E2E"
-backgroundColor = "#00D1FF"
-secondaryBackgroundColor = "#0094D0"
+primaryColor = "#00FFFF"
+backgroundColor = "#22FBFB"
+secondaryBackgroundColor = "#027B7B"
 textColor = "#000000"
